Formats resume for print

--- a/src/_components/shared/navbar.erb
+++ b/src/_components/shared/navbar.erb
@@ -1,4 +1,4 @@
-<nav class="sm:mb-16">
+<nav class="sm:mb-16 print:hidden">
   <div class="mx-auto max-w-7xl">
       <div class="sm:relative sm:flex h-16 justify-between">
           <div class="flex text-xl sm:text-2xl lg:text-4xl flex-1 sm:items-stretch sm:justify-start tracking-tight text-zinc-800 dark:text-zinc-100">
