Clips overflow text on mobile

--- a/src/_components/shared/navbar.erb
+++ b/src/_components/shared/navbar.erb
@@ -4,7 +4,7 @@
           <div class="flex text-xl sm:text-2xl lg:text-4xl flex-1 sm:items-stretch sm:justify-start tracking-tight text-zinc-800 dark:text-zinc-100">
             <a href="/" class="">Stephanie Wilkinson</a>
         </div>
-        <div class="text-sm sm:text-lg sm:space-x-4 lg:mt-1">
+        <div class="text-xs sm:text-lg sm:space-x-4 lg:mt-1">
             <a href="<%= relative_url '/projects' %>" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 text-2xl text-gray-500 hover:border-gray-300 hover:text-gray-700">Work</a>
             <a href="<%= relative_url '/community' %>" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 text-2xl text-gray-500 hover:border-gray-300 hover:text-gray-700">Community</a>
             <a href="<%= relative_url '/presentations' %>" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 text-2xl text-gray-500 hover:border-gray-300 hover:text-gray-700">Presentations</a>
