--- a/src/_components/shared/navbar.erb
+++ b/src/_components/shared/navbar.erb
@@ -1,10 +1,7 @@
 <nav class="print:hidden mb-8">
     <div class="relative flex h-16 justify-between">
-        <div class="flex text-2xl md:text-3xl lg:text-5xl flex-1 tracking-tight text-zinc-800 dark:text-zinc-100">
-            <a href="/" class="">Stephanie Wilkinson</a>
-        </div>
         <div class="show md:collapse">
-            <div class="inline-block text-left dropdown">
+            <div class="inline-block text-left mr-2 dropdown">
                 <span class="rounded-md shadow-sm">
                     <button class="inline-flex justify-center w-full px-4 py-2 text-sm font-medium leading-5 text-gray-700 transition duration-150 ease-in-out bg-white border border-gray-300 rounded-md hover:text-gray-500 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:bg-gray-50 active:text-gray-800"
                     type="button" aria-haspopup="true" aria-expanded="true" aria-controls="headlessui-menu-items-117">
@@ -14,7 +11,7 @@
                     </button>
                 </span>
                 <div class="hidden dropdown-menu">
-                    <div class="absolute right-0 w-56 mt-2 origin-top-right bg-white border border-gray-200 divide-y divide-gray-100 rounded-md shadow-lg outline-none" aria-labelledby="headlessui-menu-button-1" id="headlessui-menu-items-117" role="menu">
+                    <div class="absolute left-0 w-56 origin-top-left bg-white border border-gray-200 divide-y divide-gray-100 rounded-md shadow-lg outline-none" aria-labelledby="headlessui-menu-button-1" id="headlessui-menu-items-117" role="menu">
                         <div class="py-1">
                             <a href="<%= relative_url '/projects' %>" class="text-gray-700 flex justify-between w-full px-4 py-2 text-sm leading-5 text-left"  role="menuitem" >Work</a>
                             <a href="<%= relative_url '/community' %>" class="text-gray-700 flex justify-between w-full px-4 py-2 text-sm leading-5 text-left"  role="menuitem" >Community</a>
@@ -24,6 +21,9 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="flex text-2xl lg:text-4xl flex-1 tracking-tight text-zinc-800 dark:text-zinc-100">
+            <a href="/" class="">Stephanie Wilkinson</a>
         </div>
         <div  class="md:visible collapse text-xs md:text-lg sm:space-x-4 lg:mt-1">
             <a href="<%= relative_url '/projects' %>" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 lg:text-2xl text-gray-500 hover:border-gray-300 hover:text-gray-700">Work</a>
