Changes size of headline in nav

--- a/src/_components/shared/navbar.erb
+++ b/src/_components/shared/navbar.erb
@@ -22,7 +22,7 @@
                 </div>
             </div>
         </div>
-        <div class="flex text-2xl lg:text-4xl flex-1 tracking-tight text-zinc-800 dark:text-zinc-100">
+        <div class="flex-1 text-xl lg:text-4xl tracking-tight text-zinc-800 dark:text-zinc-100">
             <a href="/" class="">Stephanie Wilkinson</a>
         </div>
         <div  class="md:visible collapse text-xs md:text-lg sm:space-x-4 lg:mt-1">
