Switches headline and menu icon

--- a/src/_components/shared/navbar.erb
+++ b/src/_components/shared/navbar.erb
@@ -35,7 +35,7 @@
 </nav>
 
 <style>
-    .dropdown:focus-within .dropdown-menu {
+    .dropdown:focus .dropdown-menu {
     /* @apply block; */
     display:block;
     }
