Adds js for menu dropdown' '

--- a/src/_components/shared/navbar.erb
+++ b/src/_components/shared/navbar.erb
@@ -1,7 +1,7 @@
 <nav class="print:hidden mb-8">
     <div class="relative flex h-16 justify-between">
-        <div class="show md:collapse">
-            <div class="inline-block text-left mr-2 dropdown">
+        <div class="md:collapse">
+            <div class="inline-block text-left mr-2" id="dropdown-icon">
                 <span class="rounded-md shadow-sm">
                     <button class="inline-flex justify-center w-full px-4 py-2 text-sm font-medium leading-5 text-gray-700 transition duration-150 ease-in-out bg-white border border-gray-300 rounded-md hover:text-gray-500 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:bg-gray-50 active:text-gray-800"
                     type="button" aria-haspopup="true" aria-expanded="true" aria-controls="headlessui-menu-items-117">
@@ -10,7 +10,7 @@
                         </svg>
                     </button>
                 </span>
-                <div class="hidden dropdown-menu">
+                <div class="hidden" id="dropdown-menu">
                     <div class="absolute left-0 w-56 origin-top-left bg-white border border-gray-200 divide-y divide-gray-100 rounded-md shadow-lg outline-none" aria-labelledby="headlessui-menu-button-1" id="headlessui-menu-items-117" role="menu">
                         <div class="py-1">
                             <a href="<%= relative_url '/projects' %>" class="text-gray-700 flex justify-between w-full px-4 py-2 text-sm leading-5 text-left"  role="menuitem" >Work</a>
@@ -34,9 +34,16 @@
     </div>
 </nav>
 
-<style>
-    .dropdown:focus .dropdown-menu {
-    /* @apply block; */
-    display:block;
-    }
-</style>
+
+<script>
+  const dropdownIcon = document.getElementById("dropdown-icon")
+  const dropdownMenu = document.getElementById("dropdown-menu")
+
+  var classes = dropdownMenu.classList;
+
+  dropdownIcon.addEventListener("click", () => {
+    const result = classes.toggle("hidden");
+  });
+
+
+</script>
