Changes size of hero image

--- a/src/_layouts/page.erb
+++ b/src/_layouts/page.erb
@@ -13,9 +13,9 @@ layout: default
       <%= yield %>
     </span>
   </div>
-  <div class="md:pl-20">
-    <div class="mb-12 px-2.5">
-      <img alt="" sizes="32rem, 20rem" src="<%= relative_url '/images/headshot.jpg' %>" decoding="async" data-nimg="1" class="aspect-square rotate-3 rounded-3xl object-cover" loading="lazy" style="color: transparent;">
+  <div class="mx-auto md:pl-20">
+    <div class="mx-auto max-w-80 mb-12 px-2.5">
+      <img alt="stephanie wilkinson" src="<%= relative_url '/images/headshot.jpg' %>" decoding="async" data-nimg="1" class="aspect-square rotate-3 rounded-3xl object-cover" loading="lazy" style="color: transparent;">
     </div>
     <%= render "social_media" %>
   </div>
