Adds icons for links

--- a/src/_layouts/page.erb
+++ b/src/_layouts/page.erb
@@ -14,7 +14,7 @@ layout: default
     </span>
   </div>
   <div class="mx-auto md:pl-20">
-    <div class="mx-auto max-w-80 mb-12 px-2.5">
+    <div class="mx-auto max-w-80 md:max-w-full mb-12 px-2.5">
       <img alt="stephanie wilkinson" src="<%= relative_url '/images/headshot.jpg' %>" decoding="async" data-nimg="1" class="aspect-square rotate-3 rounded-3xl object-cover" loading="lazy" style="color: transparent;">
     </div>
     <%= render "social_media" %>
