--- a/src/_partials/_head.erb
+++ b/src/_partials/_head.erb
@@ -39,4 +39,5 @@
 <link rel="stylesheet" href="<%= webpack_path :css %>" />
 <script src="<%= webpack_path :js %>" defer></script>
 <script src="https://cdn.tailwindcss.com"></script>
+<script src="https://kit.fontawesome.com/123eb529e8.js" crossorigin="anonymous"></script>
 <%= live_reload_dev_js %>
