--- a/src/_partials/_social_media.erb
+++ b/src/_partials/_social_media.erb
@@ -26,11 +26,11 @@
   <div class="w-1/2">
     <ul role="list">
       <li class="flex">
-        <a href="https://twitter.com/stephanieblack" class="group flex text-sm font-medium text-zinc-800 transition hover:text-teal-500 dark:text-zinc-200 dark:hover:text-teal-500" href="/about#">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="fill-zinc-500" class="fill-zinc-500" viewBox="0 0 16 16">
-              <path d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865z"/>
+        <a href="https://bsky.app/profile/stephaniewilkinson.bsky.social" class="group flex text-sm font-medium text-zinc-800 transition hover:text-teal-500 dark:text-zinc-200 dark:hover:text-teal-500" href="/about#">
+            <svg xmlns="http://www.w3.org/2000/svg"  width="16" height="16" class="fill-zinc-500"  viewBox="0 0 520 520">
+            <path d="M111.8 62.2C170.2 105.9 233 194.7 256 242.4c23-47.6 85.8-136.4 144.2-180.2c42.1-31.6 110.3-56 110.3 21.8c0 15.5-8.9 130.5-14.1 149.2C478.2 298 412 314.6 353.1 304.5c102.9 17.5 129.1 75.5 72.5 133.5c-107.4 110.2-154.3-27.6-166.3-62.9l0 0c-1.7-4.9-2.6-7.8-3.3-7.8s-1.6 3-3.3 7.8l0 0c-12 35.3-59 173.1-166.3 62.9c-56.5-58-30.4-116 72.5-133.5C100 314.6 33.8 298 15.7 233.1C10.4 214.4 1.5 99.4 1.5 83.9c0-77.8 68.2-53.4 110.3-21.8z"/>
             </svg>
-          <span class="ml-4">Twitter / X
+          <span class="ml-4">Bluesky
           </span>
         </a>
       </li>
