--- a/src/_components/shared/navbar.erb
+++ b/src/_components/shared/navbar.erb
@@ -1,6 +1,6 @@
 <nav class="print:hidden mb-8">
     <div class="relative flex h-16 justify-between">
-        <div class="md:collapse">
+        <div class="lg:collapse">
             <div class="inline-block text-left mr-2" id="dropdown-icon">
                 <span class="rounded-md shadow-sm">
                     <button class="inline-flex justify-center w-full px-4 py-2 text-sm font-medium leading-5 text-gray-700 transition duration-150 ease-in-out bg-white border border-gray-300 rounded-md hover:text-gray-500 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:bg-gray-50 active:text-gray-800"
@@ -25,7 +25,7 @@
         <div class="flex-1 text-xl lg:text-4xl tracking-tight text-zinc-800 dark:text-zinc-100">
             <a href="/" class="">Stephanie Wilkinson</a>
         </div>
-        <div  class="md:visible collapse text-xs md:text-lg sm:space-x-4 lg:mt-1">
+        <div  class="lg:visible collapse text-xs md:text-lg sm:space-x-4 lg:mt-1">
             <a href="<%= relative_url '/projects' %>" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 lg:text-2xl text-gray-500 hover:border-gray-300 hover:text-gray-700">Work</a>
             <a href="<%= relative_url '/community' %>" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 lg:text-2xl text-gray-500 hover:border-gray-300 hover:text-gray-700">Community</a>
             <a href="<%= relative_url '/presentations' %>" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 lg:text-2xl text-gray-500 hover:border-gray-300 hover:text-gray-700">Presentations</a>
